syntax = "proto3";

package proto;

option go_package = "apigateway/proto";

service UserService {
  rpc SendUser(UserRequest) returns (UserResponse);
  rpc SignupUser(SignupRequest) returns (SignupResponse);
  rpc LoginUser(LoginRequest) returns(LoginResponse);
}

message UserRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message UserResponse {
  string message = 1;
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message SignupResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
  string role = 4;
  string error = 5;
}

message LoginRequest{
  string email = 1;
  string password = 2;
  string role = 3;
}

message LoginResponse{
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
  string role = 4;
  string error = 5;

}
